Add opening date on center
